simplify code: `collect(Collectors.toList())` -> `toList()`