@@ -10,7 +10,6 @@ import javax.annotation.CheckReturnValue;
 import javax.annotation.Nonnull;
 import java.io.File;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.codeborne.selenide.impl.WebdriverUnwrapper.unwrapRemoteWebDriver;
 import static java.util.Collections.emptyMap;
@@ -38,7 +37,9 @@ public class GridDownloadsFolder implements DownloadsFolder {
   @CheckReturnValue
   @Override
   public List<File> files() {
-    return webDriver.getDownloadableFiles().stream().map(name -> new File(name)).collect(Collectors.toList());
+    return webDriver.getDownloadableFiles().stream()
+      .map(name -> new File(name))
+      .toList();
   }
 
   @Nonnull
